--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     },
     "dependencies": {
         "@adiwajshing/baileys": "^3.5.3",
+        "@shineiichijo/marika": "^1.0.0",
         "@types/node-cron": "^2.0.3",
         "@types/qr-image": "^3.2.3",
         "akaneko": "^5.2.2",
         "anilist-node": "^1.11.0",
+        "anime-character-random": "^1.0.11",
         "anime-facts": "^4.3.12",
         "anime-wallpapers": "^1.0.1",
         "animequotes": "^2.0.0",
@@ -56,9 +58,11 @@
         "chess-image-generator-ts": "^1.0.0",
         "chess-node": "^1.1.0",
         "cron": "^1.8.2",
+        "currencyxchange": "^2.2.1",
         "dotenv": "^10.0.0",
-        "emoji-api": "^2.0.1",
         "express": "^4.17.1",
+        "form-data": "^4.0.0",
+        "fs": "^0.0.1-security",
         "fs-extra": "^10.0.0",
         "genius-lyrics": "^4.3.4",
         "genshin-db": "^3.11.3",
@@ -71,7 +75,7 @@
         "lolis.life": "^4.0.0",
         "lyrics-monarch-api": "^2.1.0",
         "mailist": "^1.0.3",
-        "mal-scraper": "^2.11.3",
+        "mal-scraper": "^2.11.4",
         "mangadex-full-api": "^5.7.0",
         "mathjs": "^10.0.0",
         "moment": "^2.29.1",
@@ -87,10 +91,12 @@
         "ptable": "^0.0.3",
         "public-waifulist": "0.0.2",
         "qr-image": "^3.2.0",
+        "quick.db": "^7.1.3",
         "sharp": "^0.29.3",
-        "shentai": "^1.3.0",
+        "shentai": "^2.0.0",
         "spotifydl-core": "^0.1.2",
-        "text-from-image": "^1.0.1",
+        "tesseract.js": "^2.1.5",
+        "text-from-image": "^1.1.1",
         "trace.moe.ts": "^1.3.7-patch2",
         "translate-google": "^1.5.0",
         "ultra-lyrics": "^1.0.3",
