--- a/package.json
+++ b/package.json
@@ -42,70 +42,55 @@
         "@adiwajshing/baileys": "^3.5.3",
         "@shineiichijo/marika": "^1.0.0",
         "@types/node-cron": "^2.0.3",
-        "@types/qr-image": "^3.2.3",
+        "@types/qr-image": "^3.2.5",
         "akaneko": "^5.2.2",
         "anilist-node": "^1.11.0",
-        "anime-character-random": "^1.0.11",
         "anime-facts": "^4.3.12",
-        "anime-wallpapers": "^1.0.1",
+        "anime-wallpaper": "^1.0.2",
         "animequotes": "^2.0.0",
         "axios": "^0.24.0",
-        "better-tord": "^1.3.7",
         "canvacord": "^5.2.3",
-        "canvas": "^2.8.0",
-        "carbon-components": "^10.46.0",
+        "canvas": "^2.9.0",
         "chalk": "^4.1.1",
         "chess-image-generator-ts": "^1.0.0",
         "chess-node": "^1.1.0",
         "cron": "^1.8.2",
-        "currencyxchange": "^2.2.1",
+        "discord-image-generation": "^1.4.9",
         "dotenv": "^10.0.0",
-        "express": "^4.17.1",
-        "form-data": "^4.0.0",
-        "fs": "^0.0.1-security",
+        "express": "^4.17.2",
         "fs-extra": "^10.0.0",
-        "genius-lyrics": "^4.3.4",
-        "genshin-db": "^3.11.3",
+        "genius-lyrics": "^4.3.5",
+        "genshin-db": "^4.0.2",
         "get-urls": "^10.0.0",
         "gifencoder": "^2.0.1",
+        "go-image-go": "^1.0.1",
         "i": "^0.3.7",
         "imgbb-uploader": "^1.3.3",
         "jimp": "^0.16.1",
         "jpeg-js": "^0.4.3",
-        "lolis.life": "^4.0.0",
-        "lyrics-monarch-api": "^2.1.0",
-        "mailist": "^1.0.3",
+        "kaori": "^2.0.6",
         "mal-scraper": "^2.11.4",
-        "mangadex-full-api": "^5.7.0",
+        "mangadex-full-api": "^5.8.0",
         "mathjs": "^10.0.0",
         "moment": "^2.29.1",
         "mongoose": "^5.12.12",
-        "mywaifulist-scraper": "^0.0.1",
         "node-cron": "^3.0.0",
         "node-fetch": "^3.0.0",
+        "node-myanimelist": "^3.0.4",
         "node-periodic-table": "^0.0.6",
         "npm": "^8.1.3",
         "oakdex-pokedex": "^0.4.5",
-        "pokecord": "^1.0.1",
         "pokedex-promise-v2": "^3.3.2",
         "ptable": "^0.0.3",
-        "public-waifulist": "0.0.2",
         "qr-image": "^3.2.0",
-        "quick.db": "^7.1.3",
-        "sharp": "^0.29.3",
         "shentai": "^2.0.0",
-        "spotifydl-core": "^0.1.2",
-        "tesseract.js": "^2.1.5",
-        "text-from-image": "^1.1.1",
-        "trace.moe.ts": "^1.3.7-patch2",
+        "spotifydl-core": "^0.2.0",
+        "trace.moe.ts": "^1.3.8",
         "translate-google": "^1.5.0",
-        "ultra-lyrics": "^1.0.3",
         "vtuber-wiki": "^1.1.5",
-        "w5-textmaker": "^1.0.2",
-        "wa-sticker-formatter": "^4.2.0",
+        "wa-sticker-formatter": "^4.3.2",
         "wikipedia": "^1.1.6",
-        "yt-search": "^2.10.2",
-        "ytdl-core": "^4.9.1",
-        "yuri-canvas": "^4.0.6"
+        "yt-search": "^2.10.3",
+        "ytdl-core": "^4.10.1"
     }
 }
