--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "genshin-db": "^3.11.3",
         "get-urls": "^10.0.0",
         "gifencoder": "^2.0.1",
+        "hxz-api": "^1.0.1",
         "i": "^0.3.7",
         "imgbb-uploader": "^1.3.3",
         "jimp": "^0.16.1",
